add potential shape loss to main loss

--- a/analysis/parallel.ipynb
+++ b/analysis/parallel.ipynb
@@ -201,22 +201,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "id": "9134799c-0cbc-48b6-af33-7033315dd02a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "VoronoiMesh version 0.1\n",
-      "DiscretePoisson version 0.3\n",
-      "Shape version: 0.1\n",
-      "SystEquations version: 0.3\n",
-      "Solver version 0.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tinyarray as ta\n",
     "import numpy as np\n",
@@ -232,7 +220,8 @@
     "import codes.parameters as parameters\n",
     "from codes.system_functions import diagonalisation, adaptive_two_parameters\n",
     "from codes.tools import hamiltonian\n",
-    "from codes.utils import eigsh, svd_transformation, dict_update, dep_acc_index, order_wavefunctions"
+    "from codes.utils import eigsh, svd_transformation, dict_update, dep_acc_index, order_wavefunctions\n",
+    "from codes.constants import sides"
    ]
   },
   {
@@ -474,11 +463,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "5c4ef4f3-dbfb-4287-b6a7-219943e811cd",
    "metadata": {},
    "outputs": [],
    "source": [
+    "pair = 'right-top'\n",
+    "\n",
     "params = parameters.junction_parameters()\n",
     "params.update(potential=system.flat_potential())\n",
     "\n",
@@ -498,47 +489,76 @@
     "\n",
     "initial_condition = (-3e-3, -3e-3, -3e-3, 3e-3)\n",
     "\n",
-    "sol1 = minimize(codes.optimization.shape_loss, \n",
+    "sol1 = minimize(optimization.shape_loss, \n",
     "         x0=initial_condition, \n",
     "         args=args, \n",
     "         method='trust-constr', \n",
     "         options={'initial_tr_radius':1e-3}\n",
-    "        )\n",
-    "\n",
-    "print(sol1.x)\n",
-    "\n",
-    "\n",
-    "\n",
-    "def call_loss(pair, base_ham, base_params, linear_terms, f_params, mlwf):\n",
-    "    ci, wf_amp = 50, 1e-4\n",
-    "    args = ((base_ham, \n",
-    "            base_params, \n",
-    "            linear_terms, \n",
-    "            f_params, \n",
-    "             mlwf[order_wavefunctions(pair)]),\n",
-    "            (pair.split('-'), ci, wf_amp)\n",
-    "           )"
+    "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "18798ef1-dc54-4bb0-b810-5f74484a9877",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def call_loss(xy,\n",
+    "              x0,\n",
+    "              pair, \n",
+    "              base_ham, \n",
+    "              base_params, \n",
+    "              linear_terms, \n",
+    "              # f_params, \n",
+    "              # mlwf\n",
+    "             ):\n",
+    "\n",
+    "            \n",
+    "    # ci, weights = 50, [1, 1e1]\n",
+    "#     args = ((base_ham, \n",
+    "#             base_params, \n",
+    "#             linear_terms, \n",
+    "#             f_params, \n",
+    "#              mlwf[order_wavefunctions(pair)]),\n",
+    "#             (pair.split('-'), ci, weights)\n",
+    "#            )\n",
+    "    \n",
+    "    args = (pair.split('-'),\n",
+    "        (base_ham, linear_terms),\n",
+    "         base_params['dep_acc_index'], \n",
+    "        )\n",
+    "\n",
+    "    for i, arm in enumerate(pair.split('-')):\n",
+    "        x0[np.where(np.array(sides) == arm)] = xy[i]\n",
+    "    \n",
+    "    return optimization.shape_loss(x0, *args)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7dec7ccc-49a2-4b77-abb3-cc7748709273",
+   "execution_count": 37,
+   "id": "87b7cb70-f9c5-421f-8bf7-8b29035a4dc3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cluster_dashboard_link = \"http://io.quantumtinkerer.tudelft.nl/user/srangaswamykup/proxy/\"\n",
+    "params = parameters.junction_parameters()\n",
+    "params.update(potential=system.flat_potential())\n",
+    "\n",
+    "index = system.indices.copy()\n",
+    "\n",
+    "# remove 50% of the points from the channel to be depleted that is closest to the center.\n",
+    "depleted_channel = list(set(sides)-set(pair.split('-')))[0]\n",
+    "depleted_indices = index[depleted_channel]\n",
+    "index[depleted_channel]  = depleted_indices[:int(len(depleted_indices)*50/100)]\n",
+    "\n",
+    "params['dep_acc_index'] = index"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "id": "2427080e-43c1-465e-9b65-fae06344b795",
    "metadata": {},
    "outputs": [
@@ -546,7 +566,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://io.quantumtinkerer.tudelft.nl/user/jdtorres/proxy/8000/clusters/6eff509412214a50ae0fec1ddf813f3b/status\n"
+      "http://io.quantumtinkerer.tudelft.nl/user/srangaswamykup/proxy/8000/clusters/e9b7f64b8b764cf590191f8767dae9e5/status\n"
      ]
     }
    ],
@@ -556,12 +576,12 @@
     "await cluster.scale(50)\n",
     "client = await cluster.get_client()\n",
     "await client.wait_for_workers(1)\n",
-    "print(\"http://io.quantumtinkerer.tudelft.nl/user/jdtorres/proxy/\"+cluster.dashboard_link[17:])"
+    "print(cluster_dashboard_link+cluster.dashboard_link[17:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "id": "30b9eada-7cba-490b-9b70-65640ad6a59e",
    "metadata": {},
    "outputs": [],
@@ -571,52 +591,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "109a4280-9d22-4cf0-9f0a-a61891352da5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "voltages = parameters.pair_voltages(initial=(-1.0e-3, -1.0e-3, -1.0e-3, 0), depleted=-7e-3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "b16e07de-2a55-4601-ab58-cba56038d813",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "params = parameters.junction_parameters()\n",
-    "params.update(potential=zero_potential)\n",
-    "base_ham = system.trijunction.hamiltonian_submatrix(sparse=True, params=system.f_params(**params))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 40,
    "id": "c1ee9a9b-2d34-408d-82ed-7de98c2cc0ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scattered_base_ham = await client.scatter(base_ham, broadcast=True)\n",
+    "scattered_base_ham = await client.scatter(system.base_ham, broadcast=True)\n",
     "scattered_linear_matrices = await client.scatter(system.linear_terms, broadcast=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 41,
    "id": "bc555de9-2415-42bd-b9ae-c9447a1c4430",
    "metadata": {},
    "outputs": [],
    "source": [
     "async def f_async(xy):\n",
     "    future = client.submit(\n",
-    "        adaptive_two_parameters,\n",
-    "        xy,\n",
-    "        trijunction=scattered_base_ham,\n",
-    "        linear_terms=scattered_linear_matrices,\n",
-    "        keys=('top', 'right'),\n",
-    "        params=voltages[pair]\n",
+    "          call_loss,\n",
+    "          xy,\n",
+    "          x0 = [-3e-3, -3e-3, -3e-3, 3e-3],\n",
+    "          pair=pair, \n",
+    "          base_ham=scattered_base_ham, \n",
+    "          base_params=params, \n",
+    "          linear_terms=scattered_linear_matrices,\n",
     "    )\n",
     "\n",
     "    return await future"
@@ -624,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 42,
    "id": "f361d9a9-d466-4580-bba7-592f9d113f8e",
    "metadata": {},
    "outputs": [],
@@ -634,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 43,
    "id": "a12905db-8cae-466f-bbe0-7f0305680463",
    "metadata": {
     "tags": []
@@ -650,10 +649,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 44,
    "id": "3241abbd-59fa-4641-bdbd-bf874259171b",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "No points given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [44]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m _, _, z \u001b[38;5;241m=\u001b[39m \u001b[43mlearner\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minterpolated_on_grid\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/adaptive/learner/learner2D.py:437\u001b[0m, in \u001b[0;36mLearner2D.interpolated_on_grid\u001b[0;34m(self, n)\u001b[0m\n\u001b[1;32m    422\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minterpolated_on_grid\u001b[39m(\u001b[38;5;28mself\u001b[39m, n\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m    423\u001b[0m     \u001b[38;5;124;03m\"\"\"Get the interpolated data on a grid.\u001b[39;00m\n\u001b[1;32m    424\u001b[0m \n\u001b[1;32m    425\u001b[0m \u001b[38;5;124;03m    Parameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    435\u001b[0m \u001b[38;5;124;03m    interpolated_on_grid : 2D numpy.ndarray\u001b[39;00m\n\u001b[1;32m    436\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 437\u001b[0m     ip \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minterpolator\u001b[49m\u001b[43m(\u001b[49m\u001b[43mscaled\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m    438\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m n \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    439\u001b[0m         \u001b[38;5;66;03m# Calculate how many grid points are needed.\u001b[39;00m\n\u001b[1;32m    440\u001b[0m         \u001b[38;5;66;03m# factor from A=√3/4 * a² (equilateral triangle)\u001b[39;00m\n\u001b[1;32m    441\u001b[0m         n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;241m0.658\u001b[39m \u001b[38;5;241m/\u001b[39m sqrt(areas(ip)\u001b[38;5;241m.\u001b[39mmin()))\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/adaptive/learner/learner2D.py:519\u001b[0m, in \u001b[0;36mLearner2D.interpolator\u001b[0;34m(self, scaled)\u001b[0m\n\u001b[1;32m    517\u001b[0m         points, values \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_data_in_bounds()\n\u001b[1;32m    518\u001b[0m         points \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_scale(points)\n\u001b[0;32m--> 519\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_ip \u001b[38;5;241m=\u001b[39m \u001b[43minterpolate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mLinearNDInterpolator\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpoints\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalues\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    520\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_ip\n\u001b[1;32m    521\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "File \u001b[0;32minterpnd.pyx:280\u001b[0m, in \u001b[0;36mscipy.interpolate.interpnd.LinearNDInterpolator.__init__\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m_qhull.pyx:1841\u001b[0m, in \u001b[0;36mscipy.spatial._qhull.Delaunay.__init__\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m_qhull.pyx:280\u001b[0m, in \u001b[0;36mscipy.spatial._qhull._Qhull.__init__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: No points given"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in callback None()\n",
+      "handle: <Handle cancelled>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/tornado/iostream.py\", line 1391, in _do_ssl_handshake\n",
+      "    self.socket.do_handshake()\n",
+      "  File \"/opt/conda/lib/python3.10/ssl.py\", line 1342, in do_handshake\n",
+      "    self._sslobj.do_handshake()\n",
+      "ssl.SSLEOFError: EOF occurred in violation of protocol (_ssl.c:997)\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.10/asyncio/events.py\", line 80, in _run\n",
+      "    self._context.run(self._callback, *self._args)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/tornado/platform/asyncio.py\", line 189, in _handle_events\n",
+      "    handler_func(fileobj, events)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/tornado/iostream.py\", line 696, in _handle_events\n",
+      "    self._handle_read()\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/tornado/iostream.py\", line 1478, in _handle_read\n",
+      "    self._do_ssl_handshake()\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/tornado/iostream.py\", line 1400, in _do_ssl_handshake\n",
+      "    return self.close(exc_info=err)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/tornado/iostream.py\", line 611, in close\n",
+      "    self._signal_closed()\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/tornado/iostream.py\", line 641, in _signal_closed\n",
+      "    self._ssl_connect_future.exception()\n",
+      "asyncio.exceptions.CancelledError\n",
+      "2022-11-06 23:32:42,666 - distributed.client - ERROR - Failed to reconnect to scheduler after 30.00 seconds, closing client\n",
+      "Exception in callback None()\n",
+      "handle: <Handle cancelled>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/tornado/iostream.py\", line 1391, in _do_ssl_handshake\n",
+      "    self.socket.do_handshake()\n",
+      "  File \"/opt/conda/lib/python3.10/ssl.py\", line 1342, in do_handshake\n",
+      "    self._sslobj.do_handshake()\n",
+      "ssl.SSLEOFError: EOF occurred in violation of protocol (_ssl.c:997)\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.10/asyncio/events.py\", line 80, in _run\n",
+      "    self._context.run(self._callback, *self._args)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/tornado/platform/asyncio.py\", line 189, in _handle_events\n",
+      "    handler_func(fileobj, events)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/tornado/iostream.py\", line 696, in _handle_events\n",
+      "    self._handle_read()\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/tornado/iostream.py\", line 1478, in _handle_read\n",
+      "    self._do_ssl_handshake()\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/tornado/iostream.py\", line 1400, in _do_ssl_handshake\n",
+      "    return self.close(exc_info=err)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/tornado/iostream.py\", line 611, in close\n",
+      "    self._signal_closed()\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/tornado/iostream.py\", line 641, in _signal_closed\n",
+      "    self._ssl_connect_future.exception()\n",
+      "asyncio.exceptions.CancelledError\n"
+     ]
+    }
+   ],
    "source": [
     "_, _, z = learner.interpolated_on_grid()"
    ]
