upper bound for undesired wf amplitude

--- a/analysis/gapsize.ipynb
+++ b/analysis/gapsize.ipynb
@@ -32,6 +32,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "059396af-26b7-4269-a696-bcb7dd4b5b0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.array([1e3, 1e2, 1e4, 1e1])\n",
+    "data[np.where(data > 1e3)] = 1e3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b93da83c-8ccc-4e0b-9280-7b2e7ac336dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1000.,  100., 1000.,   10.])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c5760005-6e33-4bbf-bbf9-0eb6e6fa69ba",
    "metadata": {
