--- a/analysis/parallel.ipynb
+++ b/analysis/parallel.ipynb
@@ -10,12 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "aa989497-02ca-49aa-9be0-e39b58844cab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import importlib "
    ]
   },
   {
@@ -65,21 +66,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "e4b26359-7283-4975-8d12-64293d563e1d",
+   "cell_type": "raw",
+   "id": "0b6fe2f2-bdc7-4f6c-b7b5-9a4183b9d181",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "thickness = [0.5, 1.5]\n",
-    "channel_width = [11.0, 15.0]\n",
+    "thickness = [3.0]\n",
+    "channel_width = [13.0, 15.0]\n",
     "gap = [2.0]\n",
     "angle = [np.pi/6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5b13093f-7250-4030-8dc3-7c2767218576",
    "metadata": {},
    "outputs": [],
@@ -88,49 +87,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "4928f626-50d4-4782-a099-bbeb815682e8",
+   "cell_type": "raw",
+   "id": "9504e4bd-0be2-47de-a864-58c27345ab71",
    "metadata": {},
-   "outputs": [],
    "source": [
     "samples = list(product(thickness, channel_width, angle, gap))\n",
     "samples = list(zip(range(len(samples)), samples)) # add identifier\n",
-    "samples = [[sample[0]] + list(sample[1])  for sample in samples] # unpack second index and make a single list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "62ebfc93-e7b1-4516-9791-70e916edee4b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 0.5, 11.0, 0.5235987755982988, 1.0],\n",
-       " [1, 0.5, 11.0, 0.5235987755982988, 3.0],\n",
-       " [2, 0.5, 15.0, 0.5235987755982988, 1.0],\n",
-       " [3, 0.5, 15.0, 0.5235987755982988, 3.0],\n",
-       " [4, 1.5, 11.0, 0.5235987755982988, 1.0],\n",
-       " [5, 1.5, 11.0, 0.5235987755982988, 3.0],\n",
-       " [6, 1.5, 15.0, 0.5235987755982988, 1.0],\n",
-       " [7, 1.5, 15.0, 0.5235987755982988, 3.0]]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "samples = [[sample[0]] + list(sample[1])  for sample in samples] # unpack second index and make a single #list\n",
     "samples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "5c9d31cc-a73f-4c4a-be37-1d78ccf3ba9e",
+   "execution_count": 29,
+   "id": "a07d94c7-f325-4fb9-976d-d538c32e9b50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pairs = ['left-right', 'left-top', 'right-top']\n",
+    "change_config = [\n",
+    "    {\"device\":\n",
+    "     {\"grid_spacing\":\n",
+    "      {\"twoDEG\": 0.5, \"normal\": 1, \"dielectric\": 1, \"air\": 5, \"gate\": 1, \"substrate\": 1}}},\n",
+    "    {\"gate\": {\"channel_width\": 13.0, \"L\":40, 'angle': np.pi/6, 'gap': 4}},\n",
+    "]\n",
+    "\n",
+    "samples = list(zip(np.zeros((len(pairs), ),dtype=int), \n",
+    "                   pairs,\n",
+    "                   [change_config]*len(pairs)\n",
+    "                  ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "3004ac73-6175-419c-9607-9004b565f00e",
    "metadata": {},
    "outputs": [
     {
@@ -139,21 +130,70 @@
        "<module 'codes.parallel' from '/home/tinkerer/trijunction-design/analysis/codes/parallel.py'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import codes.parallel\n",
-    "import importlib\n",
     "importlib.reload(codes.parallel)"
    ]
   },
   {
    "cell_type": "raw",
-   "id": "cda2608d-bf28-4db0-bc1e-feff7a9ae9af",
+   "id": "c61c41ac-3800-4716-9d35-ebf79ed685a1",
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "source": [
+    "codes.parallel.optimize_phase_voltage(samples[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "e2bd1ae8-3883-46a8-977a-caaee5b82236",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://io.quantumtinkerer.tudelft.nl/user/srangaswamykup/proxy/8000/clusters/ebc9b1f506584e48974e1f18fa15a9d8/status\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.10/site-packages/dask_gateway/client.py:1014: RuntimeWarning: coroutine 'rpc.close_rpc' was never awaited\n",
+      "  self.scheduler_comm.close_rpc()\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/tinkerer/trijunction-design/codes/config.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [48]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(cluster_dashboard_link \u001b[38;5;241m+\u001b[39m cluster\u001b[38;5;241m.\u001b[39mdashboard_link[\u001b[38;5;241m17\u001b[39m:])\n\u001b[1;32m      5\u001b[0m futures \u001b[38;5;241m=\u001b[39m client\u001b[38;5;241m.\u001b[39mmap(codes\u001b[38;5;241m.\u001b[39mparallel\u001b[38;5;241m.\u001b[39moptimize_phase_voltage, samples)\n\u001b[0;32m----> 6\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mclient\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgather\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfutures\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/distributed/client.py:2210\u001b[0m, in \u001b[0;36mClient.gather\u001b[0;34m(self, futures, errors, direct, asynchronous)\u001b[0m\n\u001b[1;32m   2208\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   2209\u001b[0m     local_worker \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m-> 2210\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msync\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   2211\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_gather\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2212\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfutures\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2213\u001b[0m \u001b[43m    \u001b[49m\u001b[43merrors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43merrors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2214\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdirect\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdirect\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2215\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlocal_worker\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlocal_worker\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2216\u001b[0m \u001b[43m    \u001b[49m\u001b[43masynchronous\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43masynchronous\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2217\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/distributed/utils.py:338\u001b[0m, in \u001b[0;36mSyncMethodMixin.sync\u001b[0;34m(self, func, asynchronous, callback_timeout, *args, **kwargs)\u001b[0m\n\u001b[1;32m    336\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m future\n\u001b[1;32m    337\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 338\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43msync\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    339\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloop\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcallback_timeout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcallback_timeout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\n\u001b[1;32m    340\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/distributed/utils.py:405\u001b[0m, in \u001b[0;36msync\u001b[0;34m(loop, func, callback_timeout, *args, **kwargs)\u001b[0m\n\u001b[1;32m    403\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m error:\n\u001b[1;32m    404\u001b[0m     typ, exc, tb \u001b[38;5;241m=\u001b[39m error\n\u001b[0;32m--> 405\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exc\u001b[38;5;241m.\u001b[39mwith_traceback(tb)\n\u001b[1;32m    406\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    407\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/distributed/utils.py:378\u001b[0m, in \u001b[0;36msync.<locals>.f\u001b[0;34m()\u001b[0m\n\u001b[1;32m    376\u001b[0m         future \u001b[38;5;241m=\u001b[39m asyncio\u001b[38;5;241m.\u001b[39mwait_for(future, callback_timeout)\n\u001b[1;32m    377\u001b[0m     future \u001b[38;5;241m=\u001b[39m asyncio\u001b[38;5;241m.\u001b[39mensure_future(future)\n\u001b[0;32m--> 378\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01myield\u001b[39;00m future\n\u001b[1;32m    379\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[1;32m    380\u001b[0m     error \u001b[38;5;241m=\u001b[39m sys\u001b[38;5;241m.\u001b[39mexc_info()\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/tornado/gen.py:762\u001b[0m, in \u001b[0;36mRunner.run\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    759\u001b[0m exc_info \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    761\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 762\u001b[0m     value \u001b[38;5;241m=\u001b[39m \u001b[43mfuture\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresult\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    763\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[1;32m    764\u001b[0m     exc_info \u001b[38;5;241m=\u001b[39m sys\u001b[38;5;241m.\u001b[39mexc_info()\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/distributed/client.py:2073\u001b[0m, in \u001b[0;36mClient._gather\u001b[0;34m(self, futures, errors, direct, local_worker)\u001b[0m\n\u001b[1;32m   2071\u001b[0m         exc \u001b[38;5;241m=\u001b[39m CancelledError(key)\n\u001b[1;32m   2072\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 2073\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m exception\u001b[38;5;241m.\u001b[39mwith_traceback(traceback)\n\u001b[1;32m   2074\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exc\n\u001b[1;32m   2075\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m errors \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mskip\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n",
+      "File \u001b[0;32m/home/srangaswamykup/trijunction-design/codes/parallel.py:26\u001b[0m, in \u001b[0;36moptimize_phase_voltage\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/tinkerer/trijunction-design/codes/config.json'"
+     ]
+    }
+   ],
    "source": [
     "with Cluster(options) as cluster:\n",
     "    cluster.scale(n=len(samples))\n",
@@ -161,34 +201,6 @@
     "    print(cluster_dashboard_link + cluster.dashboard_link[17:])\n",
     "    futures = client.map(codes.parallel.optimize_phase_voltage, samples)\n",
     "    result = client.gather(futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "2cc59233-c8a4-425e-b8fa-9e4d3c2cd0eb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 0.5, 11.0, 0.5235987755982988, 1.0],\n",
-       " [1, 0.5, 11.0, 0.5235987755982988, 3.0],\n",
-       " [2, 0.5, 15.0, 0.5235987755982988, 1.0],\n",
-       " [3, 0.5, 15.0, 0.5235987755982988, 3.0],\n",
-       " [4, 1.5, 11.0, 0.5235987755982988, 1.0],\n",
-       " [5, 1.5, 11.0, 0.5235987755982988, 3.0],\n",
-       " [6, 1.5, 15.0, 0.5235987755982988, 1.0],\n",
-       " [7, 1.5, 15.0, 0.5235987755982988, 3.0]]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "samples"
    ]
   },
   {
