--- a/analysis/minimal_loss.ipynb
+++ b/analysis/minimal_loss.ipynb
@@ -198,6 +198,10 @@
    "execution_count": null,
    "id": "135e2a9e-a594-4aa0-9751-d71d4c444869",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
