change figure format to png

--- a/example.ipynb
+++ b/example.ipynb
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaa9c54f-09a2-49a8-ac10-b624e1d3c15f",
+   "id": "7f6b5680-daae-4053-9eb3-beb01cbfedae",
    "metadata": {
     "tags": []
    },
@@ -149,7 +149,7 @@
     "    gate_sites = full_grid[gates[gate]]\n",
     "    plt.scatter(gate_sites[:, 0], gate_sites[:, 1], s = 0.5, c = CB_friendly_color[1])\n",
     "plt.axis('off');\n",
-    "plt.savefig('figures/trijunction.pdf', format='pdf')"
+    "plt.savefig('figures/trijunction.png', format='png')"
    ]
   },
   {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e946cce7-7b20-4272-b65c-60bdcfef08c2",
+   "id": "3ddeebf0-5c5a-426f-ae63-2c95855cb6c1",
    "metadata": {
     "tags": []
    },
@@ -189,7 +189,7 @@
     "                          trijunction.utils.density(eigvec.T[i]),\n",
     "                          ax=ax[i],\n",
     "                          colorbar=False);\n",
-    "plt.savefig(\"figures/Decoupled_wavefunctions.pdf\", format='pdf')"
+    "plt.savefig(\"figures/Decoupled_wavefunctions.png\", format='png')"
    ]
   },
   {
